dedicated handling of touching inner rings in multipoygons
The previous workaround of using `buffer(0)` to let JTS join any
touching inner rings can be very slow, up to the point of
potentially bringing a query to an almost complete halt when it
has to be called on very large multipolygons (e.g. relation 1205151).

This adds dedicated handling of touching inner rings, and merges
them before the geometry object is created.

A few test cases were adjusted, because the new handling is
following more strictly the multipolygon validity rules given
in the osm wiki.

Also includes some minor code cleanup (e.g. adding of a private
construtor to the static geometry builder utility class to hide
the implicit public constructor).